// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproTextField > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="modified-classes"
  id="modified-unique-id-container"
  style="
    margin-bottom: 12px;
    max-width: 300px;
    min-width: 100px;
    width: 200px;
  "
>
  <div class="
    amelipro-text-field__wrapper
    d-flex
    flex-column
    flex-md-row
    w-100
  ">
    <div class="
      align-baseline
      d-inline-flex
      mb-1
      mr-md-2
      mt-md-2
    ">
      <label
        class="
          amelipro-text-field__label
          mr-2
        "
        for="modified-unique-id"
        id="modified-unique-id-label"
        style="
          max-width: 120px;
          min-width: 60px;
        "
      >
        Modified label
        <span>
          <span aria-hidden="true">
            &nbsp;*
          </span>
          <span class="d-sr-only">
            &nbsp;Champ obligatoire
          </span>
        </span>
      </label>
    </div>
    <div
      aria-required="true"
      bg-color="ap-grey-lighten-2"
      class="
        amelipro-text-field
        pt-0
        v-text-field-stub
      "
      color="ap-blue-darken-1"
      density="compact"
      style="
        max-width: 150px;
        min-width: 50px;
        background-color: transparent;
      "
      variant="outlined"
    >
      <amelipro-message-stub
        alignstart="false"
        borderleftmessage="false"
        dark="false"
        dismissible="false"
        noicon="true"
        text="true"
        type="error"
        uniqueid="modified-unique-id-error"
        value="true"
        width="100%"
      ></amelipro-message-stub>
    </div>
  </div>
  <!-- v-if -->
</div>
`;

exports[`AmeliproTextField > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class=""
  id="required-unique-id-container"
  style="margin-bottom: 12px;"
>
  <div class="
    amelipro-text-field__wrapper
    d-flex
    flex-column
    w-100
  ">
    <div class="
      align-baseline
      d-inline-flex
      mb-1
    ">
      <label
        class="
          amelipro-text-field__label
          mr-2
        "
        for="required-unique-id"
        id="required-unique-id-label"
      >
        Required label
        <!-- v-if -->
      </label>
    </div>
    <div
      aria-required="false"
      bg-color="ap-white"
      class="
        amelipro-text-field
        pt-0
        v-text-field-stub
      "
      color="ap-blue-darken-1"
      density="compact"
      variant="outlined"
    >
      <amelipro-message-stub
        alignstart="false"
        borderleftmessage="false"
        dark="false"
        dismissible="false"
        noicon="true"
        text="true"
        type="error"
        uniqueid="required-unique-id-error"
        value="true"
        width="100%"
      ></amelipro-message-stub>
    </div>
  </div>
  <!-- v-if -->
</div>
`;
